docs/apache-airflow-providers-docker/2.3.0/_sources/_api/airflow/providers/docker/operators/docker/index.rst.txt
:mod:`airflow.providers.docker.operators.docker`
================================================

.. py:module:: airflow.providers.docker.operators.docker

.. autoapi-nested-parse::

   Implements Docker operator



Module Contents
---------------

.. py:class:: DockerOperator(*, image: str, api_version: Optional[str] = None, command: Optional[Union[str, List[str]]] = None, container_name: Optional[str] = None, cpus: float = 1.0, docker_url: str = 'unix://var/run/docker.sock', environment: Optional[Dict] = None, private_environment: Optional[Dict] = None, force_pull: bool = False, mem_limit: Optional[Union[float, str]] = None, host_tmp_dir: Optional[str] = None, network_mode: Optional[str] = None, tls_ca_cert: Optional[str] = None, tls_client_cert: Optional[str] = None, tls_client_key: Optional[str] = None, tls_hostname: Optional[Union[str, bool]] = None, tls_ssl_version: Optional[str] = None, mount_tmp_dir: bool = True, tmp_dir: str = '/tmp/airflow', user: Optional[Union[str, int]] = None, mounts: Optional[List[Mount]] = None, entrypoint: Optional[Union[str, List[str]]] = None, working_dir: Optional[str] = None, xcom_all: bool = False, docker_conn_id: Optional[str] = None, dns: Optional[List[str]] = None, dns_search: Optional[List[str]] = None, auto_remove: bool = False, shm_size: Optional[int] = None, tty: bool = False, privileged: bool = False, cap_add: Optional[Iterable[str]] = None, extra_hosts: Optional[Dict[str, str]] = None, retrieve_output: bool = False, retrieve_output_path: Optional[str] = None, **kwargs)

   Bases: :class:`airflow.models.BaseOperator`

   Execute a command inside a docker container.

   By default, a temporary directory is
   created on the host and mounted into a container to allow storing files
   that together exceed the default disk size of 10GB in a container.
   In this case The path to the mounted directory can be accessed
   via the environment variable ``AIRFLOW_TMP_DIR``.

   If the volume cannot be mounted, warning is printed and an attempt is made to execute the docker
   command without the temporary folder mounted. This is to make it works by default with remote docker
   engine or when you run docker-in-docker solution and temporary directory is not shared with the
   docker engine. Warning is printed in logs in this case.

   If you know you run DockerOperator with remote engine or via docker-in-docker
   you should set ``mount_tmp_dir`` parameter to False. In this case, you can still use
   ``mounts`` parameter to mount already existing named volumes in your Docker Engine
   to achieve similar capability where you can store files exceeding default disk size
   of the container,

   If a login to a private registry is required prior to pulling the image, a
   Docker connection needs to be configured in Airflow and the connection ID
   be provided with the parameter ``docker_conn_id``.

   :param image: Docker image from which to create the container.
       If image tag is omitted, "latest" will be used.
   :type image: str
   :param api_version: Remote API version. Set to ``auto`` to automatically
       detect the server's version.
   :type api_version: str
   :param command: Command to be run in the container. (templated)
   :type command: str or list
   :param container_name: Name of the container. Optional (templated)
   :type container_name: str or None
   :param cpus: Number of CPUs to assign to the container.
       This value gets multiplied with 1024. See
       https://docs.docker.com/engine/reference/run/#cpu-share-constraint
   :type cpus: float
   :param docker_url: URL of the host running the docker daemon.
       Default is unix://var/run/docker.sock
   :type docker_url: str
   :param environment: Environment variables to set in the container. (templated)
   :type environment: dict
   :param private_environment: Private environment variables to set in the container.
       These are not templated, and hidden from the website.
   :type private_environment: dict
   :param force_pull: Pull the docker image on every run. Default is False.
   :type force_pull: bool
   :param mem_limit: Maximum amount of memory the container can use.
       Either a float value, which represents the limit in bytes,
       or a string like ``128m`` or ``1g``.
   :type mem_limit: float or str
   :param host_tmp_dir: Specify the location of the temporary directory on the host which will
       be mapped to tmp_dir. If not provided defaults to using the standard system temp directory.
   :type host_tmp_dir: str
   :param network_mode: Network mode for the container.
   :type network_mode: str
   :param tls_ca_cert: Path to a PEM-encoded certificate authority
       to secure the docker connection.
   :type tls_ca_cert: str
   :param tls_client_cert: Path to the PEM-encoded certificate
       used to authenticate docker client.
   :type tls_client_cert: str
   :param tls_client_key: Path to the PEM-encoded key used to authenticate docker client.
   :type tls_client_key: str
   :param tls_hostname: Hostname to match against
       the docker server certificate or False to disable the check.
   :type tls_hostname: str or bool
   :param tls_ssl_version: Version of SSL to use when communicating with docker daemon.
   :type tls_ssl_version: str
   :param mount_tmp_dir: Specify whether the temporary directory should be bind-mounted
       from the host to the container. Defaults to True
   :type mount_tmp_dir: bool
   :param tmp_dir: Mount point inside the container to
       a temporary directory created on the host by the operator.
       The path is also made available via the environment variable
       ``AIRFLOW_TMP_DIR`` inside the container.
   :type tmp_dir: str
   :param user: Default user inside the docker container.
   :type user: int or str
   :param mounts: List of volumes to mount into the container. Each item should
       be a :py:class:`docker.types.Mount` instance.
   :type mounts: list[docker.types.Mount]
   :param entrypoint: Overwrite the default ENTRYPOINT of the image
   :type entrypoint: str or list
   :param working_dir: Working directory to
       set on the container (equivalent to the -w switch the docker client)
   :type working_dir: str
   :param xcom_all: Push all the stdout or just the last line.
       The default is False (last line).
   :type xcom_all: bool
   :param docker_conn_id: The :ref:`Docker connection id <howto/connection:docker>`
   :type docker_conn_id: str
   :param dns: Docker custom DNS servers
   :type dns: list[str]
   :param dns_search: Docker custom DNS search domain
   :type dns_search: list[str]
   :param auto_remove: Auto-removal of the container on daemon side when the
       container's process exits.
       The default is False.
   :type auto_remove: bool
   :param shm_size: Size of ``/dev/shm`` in bytes. The size must be
       greater than 0. If omitted uses system default.
   :type shm_size: int
   :param tty: Allocate pseudo-TTY to the container
       This needs to be set see logs of the Docker container.
   :type tty: bool
   :param privileged: Give extended privileges to this container.
   :type privileged: bool
   :param cap_add: Include container capabilities
   :type cap_add: list[str]
   :param retrieve_output: Should this docker image consistently attempt to pull from and output
       file before manually shutting down the image. Useful for cases where users want a pickle serialized
       output that is not posted to logs
   :type retrieve_output: bool
   :param retrieve_output_path: path for output file that will be retrieved and passed to xcom
   :type retrieve_output_path: Optional[str]

   .. attribute:: template_fields
      :annotation: = ['command', 'environment', 'container_name']

      

   .. attribute:: template_ext
      :annotation: = ['.sh', '.bash']

      

   
   .. method:: get_hook(self)

      Retrieves hook for the operator.

      :return: The Docker Hook



   
   .. method:: execute(self, context)



   
   .. staticmethod:: format_command(command: Union[str, List[str]])

      Retrieve command(s). if command string starts with [, it returns the command list)

      :param command: Docker command or entrypoint
      :type command: str | List[str]

      :return: the command (or commands)
      :rtype: str | List[str]



   
   .. method:: on_kill(self)




